# rust

other_learnings/adamanagrams/: Cargo.toml
other_learnings/adamanagrams/src/: main.rs
other_learnings/autocomplete/: Cargo.toml
other_learnings/autocomplete/src/: main.rs
other_learnings/blackjack/: Cargo.toml
other_learnings/blackjack/src/: card.rs  cheapo.rs  cheapo_p.rs  danny.rs  dealer.rs  edgar.rs  game.rs  hand.rs  human.rs  main.rs  player.rs  ray.rs  util.rs
other_learnings/blackjack_rs/: Cargo.toml
other_learnings/blackjack_rs/src/: card.rs  cheapo.rs  cheapo_p.rs  danny.rs  dealer.rs  deck.rs  edgar.rs  game.rs  hand.rs  lib.rs  player.rs  ray.rs  util.rs
other_learnings/bmp/src/: main.rs
other_learnings/caching/: Cargo.toml
other_learnings/caching/src/: main.rs  sized_lru.rs  timed_cache.rs
other_learnings/collatz_mapper/: Cargo.toml  collatz.dot
other_learnings/collatz_mapper/src/: main.rs
other_learnings/coupon/: Cargo.toml
other_learnings/coupon/src/: main.rs
other_learnings/fannkuch/: Cargo.toml
other_learnings/fannkuch/src/: main.rs
other_learnings/fast_modular_exponentiation/: Cargo.toml
other_learnings/fast_modular_exponentiation/src/: main.rs
other_learnings/graphql/: Cargo.toml
other_learnings/graphql/src/: main.rs
other_learnings/graphql/src/model/: mod.rs
other_learnings/graphql/src/routes/: mod.rs
other_learnings/grpc/: Cargo.toml
other_learnings/grpc/src/: client.rs  server.rs  store.rs
other_learnings/int_substring/: Cargo.toml
other_learnings/int_substring/src/: main.rs
other_learnings/mandlebrot/: Cargo.toml
other_learnings/mandlebrot/src/: main.rs
other_learnings/nav_tree/: Cargo.toml
other_learnings/nav_tree/src/: main.rs
other_learnings/prime_counter/: Cargo.toml
other_learnings/prime_counter/src/: main.rs
other_learnings/risp/src/: main.rs
other_learnings/rubiks/: Cargo.toml
other_learnings/rubiks/src/: main.rs
other_learnings/skanagrams/: Cargo.toml
other_learnings/skanagrams/src/: main.rs
other_learnings/sorting/: Cargo.toml
other_learnings/sorting/src/: main.rs
other_learnings/three_num_sum/: Cargo.toml
other_learnings/three_num_sum/src/: main.rs
other_learnings/use_priv_dep/: Cargo.toml
other_learnings/use_priv_dep/src/: main.rs
rust_book/enums/src/: main.rs
rust_book/fibo/: Cargo.toml
rust_book/fibo/src/: main.rs
rust_book/functions/src/: main.rs
rust_book/gql/: Cargo.toml
rust_book/gql/queries/: schema.json  user_push_tokens.graphql
rust_book/gql/src/: main.rs
rust_book/guessing_game/src/: main.rs
rust_book/hello-rust/src/: main.rs
rust_book/hello-world/: Cargo.toml
rust_book/hello-world/src/: main.rs
rust_book/loops/src/: main.rs
rust_book/matching/src/: main.rs  other_thing.rs
rust_book/options/src/: main.rs
rust_book/ownership/src/: main.rs
rust_book/rectangles/src/: main.rs
rust_book/rectangles2/src/: main.rs
rust_book/slices/src/: main.rs
rust_book/strings/src/: main.rs
rust_book/vectors/src/: main.rs
