[package]
name = "adamanagrams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false
