[package]
name = "fast_modular_exponentiation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
mpsc = "0.2.3"
num-bigint = "0.4.4"
num-traits = "0.2.15"
rand = { version = "0.8.5", features = [] }

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false
