[package]
name = "nav_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false
