[package]
name = "gql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
reqwest = { version = "0.11.11", features = ["json"]}
graphql_client = {version = "0.11.0", features = ["graphql_query_derive", "reqwest"]}
